[tool.poetry]
name = "phanas-pydantic-helpers"
version = "1.0.1"  # Also at version.py::__version__
description = "A collection of helper functions/classes for Pydantic."
license = "MIT"
authors = ["Phanabani <phanabani@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Phanabani/phanas-pydantic-helpers"
keywords = ["pydantic", "helper", "helpers"]
packages = [{ include = "phanas_pydantic_helpers" }]

[tool.poetry.dependencies]
python = "^3.6"
pendulum = { version = "^2.1.2", optional = true }
pydantic = "^1.10.4"
pytimeparse = {version = "^1.1.8", optional = true}
typing-extensions = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[tool.poetry.extras]
time = ["pendulum", "pytimeparse"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
